Obtenção de Registros e Coleções

--- a/06-behavior-eloquent/composer.json
+++ b/06-behavior-eloquent/composer.json
@@ -33,7 +33,7 @@
     },
     "autoload": {
         "psr-4": {
-            "LaraDev\\": "app/"
+            "App\\": "app/"
         },
         "classmap": [
             "database/seeds",
